--- a/css/main.css
+++ b/css/main.css
@@ -235,4 +235,59 @@ a {
     width: 100%;
     height: auto;
   }
+
+  /* general style changes like font sizes */
+  .first-node {
+    font-size: 48px;
+  }
+
+  body {
+    font-size: 24px;
+  }
+
+  .dropbtn {
+    font-size: 16px;
+  }
+
+  .dropdown-content {
+    font-size: 16px;
+  }
+
+  /* setting up the grid format for the player slides */
+  .stats {
+    list-style: none;
+    color: black;
+    font-weight: bold;
+    font-size: 30px;
+    margin-bottom: 0;
+  }
+
+  .wrapper {
+    display: grid;
+    grid-template-columns: repeat(1, 200px);
+    justify-content: center;
+    padding: 0;
+  }
+
+  .desktop-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .item1 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+
+  .avatar {
+    vertical-align: middle;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    border: solid 5px white;
+    object-fit: cover;
+    justify-content: center;
+  }
 }
