--- a/css/main.css
+++ b/css/main.css
@@ -228,44 +228,25 @@ a {
   font-weight: bold;
 }
 
-/* hover effect for images */
-.container {
-  position: relative;
-  width: 50%;
+/* scroll to top button styles, taken from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  /* border: none;
+  outline: none; */
+  /* background-color: black;
+  color: white; */
+  /* cursor: pointer;
+  padding: 15px; */
+  /* border-radius: 10px; */
+  /* font-size: 16px; */
 }
 
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: 0.5s ease;
-  background-color: #008cba;
-}
-
-.container:hover .overlay {
-  opacity: 1;
-}
-
-.text {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  transform: translate(-50%, -50%);
-  text-align: center;
+html {
+  scroll-behavior: smooth;
 }
 
 /* desktop styles */
