--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,7 @@ html {
   height: 100%;
 }
 
-/* other desktop styles */
+/* other mobile styles */
 p {
   margin: 20px;
   line-height: 1.5;
@@ -201,7 +201,15 @@ p {
   margin-bottom: 0;
 }
 
-.wrapper {
+li {
+  list-style: none;
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 0;
+}
+
+.wrapper > ul {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -228,21 +236,13 @@ a {
   font-weight: bold;
 }
 
-/* scroll to top button styles, taken from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
+/* nav button styles, taken from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
 #myBtn {
   display: none;
   position: fixed;
   bottom: 20px;
   right: 30px;
   z-index: 99;
-  /* border: none;
-  outline: none; */
-  /* background-color: black;
-  color: white; */
-  /* cursor: pointer;
-  padding: 15px; */
-  /* border-radius: 10px; */
-  /* font-size: 16px; */
 }
 
 html {
@@ -277,19 +277,22 @@ html {
   }
 
   /* setting up the grid format for the player slides */
-  .stats {
+  li {
     list-style: none;
     color: black;
     font-weight: bold;
     font-size: 30px;
     margin-bottom: 0;
+    line-height: 1.5;
+    margin: 15px;
   }
 
-  .wrapper {
+  .wrapper > ul {
     display: grid;
-    grid-template-columns: repeat(1, 200px);
+    grid-template-columns: repeat(1, 300px);
     justify-content: center;
     padding: 0;
+    padding-left: 40px;
   }
 
   .desktop-wrapper {
