--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ html {
   padding: 10px;
   width: 85%;
   margin: 0px auto;
+  border-radius: 10px;
 }
 
 .first-node {
@@ -64,6 +65,7 @@ html {
   font-family: "Open Sans", sans-serif;
   border: none;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 /* Dropdown button on hover & focus */
@@ -89,6 +91,7 @@ html {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  border-radius: 10px;
 }
 
 /* Links inside the dropdown */
@@ -237,12 +240,22 @@ a {
 }
 
 /* nav button styles, taken from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
-#myBtn {
+#myBtn1 {
   display: none;
   position: fixed;
   bottom: 20px;
   right: 30px;
   z-index: 99;
+  cursor: pointer;
+}
+
+#myBtn2 {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 70px;
+  z-index: 99;
+  cursor: pointer;
 }
 
 html {
