--- a/css/main.css
+++ b/css/main.css
@@ -221,14 +221,14 @@ li {
 body {
   transition: background-color 1s;
 }
-section {
+section > div {
   transition: background-color 1s;
   opacity: 0;
   transform: scale(0.5);
   transition: all 500ms;
   height: 100%;
 }
-section.active {
+section.active > div {
   opacity: 1;
   transform: scale(1);
 }
@@ -241,18 +241,18 @@ a {
 
 /* nav button styles, taken from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
 #myBtn1 {
-  display: none;
+  /* display: none; */
   position: fixed;
-  bottom: 20px;
+  bottom: 15px;
   right: 30px;
   z-index: 99;
   cursor: pointer;
 }
 
 #myBtn2 {
-  display: none;
+  /* display: none; */
   position: fixed;
-  bottom: 20px;
+  bottom: 15px;
   right: 70px;
   z-index: 99;
   cursor: pointer;
